Fix: header jumping

--- a/src/components/UI/Header/_header.scss
+++ b/src/components/UI/Header/_header.scss
@@ -3,6 +3,7 @@
   gap: 25px;
   grid-template-columns: max-content auto 25% max-content;
   align-items: center;
+  min-height: 74px;
   padding: $padding-block-main;
 
   &__nav {
